# SistemasEmbebidos_17_1

./: README.md
Conexion wifi/: Stream de conexion.txt
Modularizacion en C++ RPi/SEE/: CMakeLists.txt  Programs Descriptor.txt
Modularizacion en C++ RPi/SEE/build_Def/: CMakeCache.txt  Makefile  cmake_install.cmake  see_project.cbp
Modularizacion en C++ RPi/SEE/build_Def/libraries/: Makefile  SEELibs.cbp  cmake_install.cmake
Modularizacion en C++ RPi/SEE/build_Def/libraries/semaphore_aux/: Makefile  cmake_install.cmake  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Def/libraries/serial_aux/: Makefile  cmake_install.cmake  serial_aux.cbp
Modularizacion en C++ RPi/SEE/build_Def/libraries/socket_aux/: Makefile  cmake_install.cmake  socket_aux.cbp
Modularizacion en C++ RPi/SEE/build_Def/libraries/thread_aux/: Makefile  cmake_install.cmake  thread_aux.cbp
Modularizacion en C++ RPi/SEE/build_Def/master/: Makefile  cmake_install.cmake  master.cbp
Modularizacion en C++ RPi/SEE/build_Linux/: CMakeCache.txt  Makefile  cmake_install.cmake  see_project.cbp
Modularizacion en C++ RPi/SEE/build_Linux/Deploy/: master
Modularizacion en C++ RPi/SEE/build_Linux/camControllers/: Makefile  SEELibs.cbp  camController.cbp  cmake_install.cmake
Modularizacion en C++ RPi/SEE/build_Linux/camControllers/faceCamera/: Makefile  cmake_install.cmake  faceCamera.cbp  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/camControllers/moveCamera/: Makefile  cmake_install.cmake  moveCamera.cbp  socket_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/camControllers/semaphore_aux/: Makefile  cmake_install.cmake  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/camControllers/socket_aux/: Makefile  cmake_install.cmake  socket_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/camControllers/thread_aux/: Makefile  cmake_install.cmake  thread_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/gsmController/: Makefile  cmake_install.cmake  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/libraries/: Makefile  SEELibs.cbp  ThreadTest.cbp  cmake_install.cmake
Modularizacion en C++ RPi/SEE/build_Linux/libraries/semaphore_aux/: Makefile  cmake_install.cmake  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/libraries/serial_aux/: Makefile  cmake_install.cmake  serial_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/libraries/socket_aux/: Makefile  cmake_install.cmake  socket_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/libraries/thread_aux/: Makefile  cmake_install.cmake  thread_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/master/: Makefile  cmake_install.cmake  master.cbp
Modularizacion en C++ RPi/SEE/build_Linux/pyRunner/: Makefile  SEELibs.cbp  cmake_install.cmake  pyRunner.cbp
Modularizacion en C++ RPi/SEE/build_Linux/pyRunner/extServUpdate/: Makefile  cmake_install.cmake  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/pyRunner/semaphore_aux/: Makefile  cmake_install.cmake  semaphore_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/pyRunner/socket_aux/: Makefile  cmake_install.cmake  socket_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/pyRunner/thread_aux/: Makefile  cmake_install.cmake  thread_aux.cbp
Modularizacion en C++ RPi/SEE/build_Linux/ucSecurity/: Makefile  ThreadTest.cbp  cmake_install.cmake  ucSecurity.cbp
Modularizacion en C++ RPi/SEE/camControllers/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/camControllers/faceCamera/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/camControllers/moveCamera/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/camControllers/moveCamera/include/: mysocket.h
Modularizacion en C++ RPi/SEE/gsmController/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/gsmController/include/: mysemaphore.h
Modularizacion en C++ RPi/SEE/libraries/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/libraries/semaphore_aux/: CMakeLists.txt  CMakeLists.txt~
Modularizacion en C++ RPi/SEE/libraries/serial_aux/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/libraries/serial_aux/src/: mysemaphore.cpp
Modularizacion en C++ RPi/SEE/libraries/socket_aux/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/libraries/thread_aux/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/master/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/master/src/: main.cpp
Modularizacion en C++ RPi/SEE/pyRunner/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/pyRunner/extServUpdate/: CMakeLists.txt
Modularizacion en C++ RPi/SEE/ucSecurity/: CMakeLists.txt
(+223 files in other folders)
